03-Syntax-Analysys/.antlr/Tutor03Parser.py
# Generated from /home/hirito/Documents/HK201/foundation-of-propraming-languages/03-Syntax-Analysys/Tutor03.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Tutor03Parser ( Parser ):

    grammarFileName = "Tutor03.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'int'", "'float'", "'return'", "'{'", "'}'", "';'", 
                     "','", "'='", "'('", "')'", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "ID", "INTLIT", "FLOATLIT", "INT", "FLOAT", 
                      "RETURN", "LB", "RB", "SM", "CM", "EQ", "LP", "RP", 
                      "ADDOP", "SUBOP", "MULOP", "DIVOP", "WS" ]

    RULE_program = 0
    RULE_type_bkit = 1
    RULE_func_declare = 2
    RULE_param_declare = 3
    RULE_body = 4
    RULE_stmt = 5
    RULE_stmt_assign = 6
    RULE_stmt_call = 7
    RULE_stmt_return = 8
    RULE_func_call = 9
    RULE_exp = 10
    RULE_operands = 11
    RULE_var_declare = 12
    RULE_idlists = 13

    ruleNames =  [ "program", "type_bkit", "func_declare", "param_declare", 
                   "body", "stmt", "stmt_assign", "stmt_call", "stmt_return", 
                   "func_call", "exp", "operands", "var_declare", "idlists" ]

    EOF = Token.EOF
    ID=1
    INTLIT=2
    FLOATLIT=3
    INT=4
    FLOAT=5
    RETURN=6
    LB=7
    RB=8
    SM=9
    CM=10
    EQ=11
    LP=12
    RP=13
    ADDOP=14
    SUBOP=15
    MULOP=16
    DIVOP=17
    WS=18

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Tutor03Parser.Var_declareContext)
            else:
                return self.getTypedRuleContext(Tutor03Parser.Var_declareContext,i)


        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Tutor03Parser.Func_declareContext)
            else:
                return self.getTypedRuleContext(Tutor03Parser.Func_declareContext,i)


        def getRuleIndex(self):
            return Tutor03Parser.RULE_program




    def program(self):

        localctx = Tutor03Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Tutor03Parser.INT or _la==Tutor03Parser.FLOAT:
                self.state = 30
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 28
                    self.var_declare()
                    pass

                elif la_ == 2:
                    self.state = 29
                    self.func_declare()
                    pass


                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_bkitContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(Tutor03Parser.INT, 0)

        def FLOAT(self):
            return self.getToken(Tutor03Parser.FLOAT, 0)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_type_bkit




    def type_bkit(self):

        localctx = Tutor03Parser.Type_bkitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type_bkit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            _la = self._input.LA(1)
            if not(_la==Tutor03Parser.INT or _la==Tutor03Parser.FLOAT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_bkit(self):
            return self.getTypedRuleContext(Tutor03Parser.Type_bkitContext,0)


        def ID(self):
            return self.getToken(Tutor03Parser.ID, 0)

        def param_declare(self):
            return self.getTypedRuleContext(Tutor03Parser.Param_declareContext,0)


        def body(self):
            return self.getTypedRuleContext(Tutor03Parser.BodyContext,0)


        def getRuleIndex(self):
            return Tutor03Parser.RULE_func_declare




    def func_declare(self):

        localctx = Tutor03Parser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_func_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.type_bkit()
            self.state = 38
            self.match(Tutor03Parser.ID)
            self.state = 39
            self.param_declare()
            self.state = 40
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(Tutor03Parser.LP, 0)

        def RP(self):
            return self.getToken(Tutor03Parser.RP, 0)

        def type_bkit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Tutor03Parser.Type_bkitContext)
            else:
                return self.getTypedRuleContext(Tutor03Parser.Type_bkitContext,i)


        def idlists(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Tutor03Parser.IdlistsContext)
            else:
                return self.getTypedRuleContext(Tutor03Parser.IdlistsContext,i)


        def SM(self, i:int=None):
            if i is None:
                return self.getTokens(Tutor03Parser.SM)
            else:
                return self.getToken(Tutor03Parser.SM, i)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_param_declare




    def param_declare(self):

        localctx = Tutor03Parser.Param_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(Tutor03Parser.LP)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Tutor03Parser.INT or _la==Tutor03Parser.FLOAT:
                self.state = 43
                self.type_bkit()
                self.state = 44
                self.idlists()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Tutor03Parser.SM:
                    self.state = 45
                    self.match(Tutor03Parser.SM)
                    self.state = 46
                    self.type_bkit()
                    self.state = 47
                    self.idlists()
                    self.state = 53
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 56
            self.match(Tutor03Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(Tutor03Parser.LB, 0)

        def RB(self):
            return self.getToken(Tutor03Parser.RB, 0)

        def var_declare(self):
            return self.getTypedRuleContext(Tutor03Parser.Var_declareContext,0)


        def stmt(self):
            return self.getTypedRuleContext(Tutor03Parser.StmtContext,0)


        def getRuleIndex(self):
            return Tutor03Parser.RULE_body




    def body(self):

        localctx = Tutor03Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(Tutor03Parser.LB)
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Tutor03Parser.INT, Tutor03Parser.FLOAT]:
                self.state = 59
                self.var_declare()
                pass
            elif token in [Tutor03Parser.ID, Tutor03Parser.RETURN]:
                self.state = 60
                self.stmt()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 63
            self.match(Tutor03Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt_assign(self):
            return self.getTypedRuleContext(Tutor03Parser.Stmt_assignContext,0)


        def stmt_call(self):
            return self.getTypedRuleContext(Tutor03Parser.Stmt_callContext,0)


        def stmt_return(self):
            return self.getTypedRuleContext(Tutor03Parser.Stmt_returnContext,0)


        def getRuleIndex(self):
            return Tutor03Parser.RULE_stmt




    def stmt(self):

        localctx = Tutor03Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stmt)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.stmt_assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.stmt_call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.stmt_return()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_assignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Tutor03Parser.ID, 0)

        def EQ(self):
            return self.getToken(Tutor03Parser.EQ, 0)

        def exp(self):
            return self.getTypedRuleContext(Tutor03Parser.ExpContext,0)


        def SM(self):
            return self.getToken(Tutor03Parser.SM, 0)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_stmt_assign




    def stmt_assign(self):

        localctx = Tutor03Parser.Stmt_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_stmt_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(Tutor03Parser.ID)
            self.state = 71
            self.match(Tutor03Parser.EQ)
            self.state = 72
            self.exp(0)
            self.state = 73
            self.match(Tutor03Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_call(self):
            return self.getTypedRuleContext(Tutor03Parser.Func_callContext,0)


        def SM(self):
            return self.getToken(Tutor03Parser.SM, 0)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_stmt_call




    def stmt_call(self):

        localctx = Tutor03Parser.Stmt_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.func_call()
            self.state = 76
            self.match(Tutor03Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_returnContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(Tutor03Parser.RETURN, 0)

        def exp(self):
            return self.getTypedRuleContext(Tutor03Parser.ExpContext,0)


        def SM(self):
            return self.getToken(Tutor03Parser.SM, 0)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_stmt_return




    def stmt_return(self):

        localctx = Tutor03Parser.Stmt_returnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_stmt_return)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(Tutor03Parser.RETURN)
            self.state = 79
            self.exp(0)
            self.state = 80
            self.match(Tutor03Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Tutor03Parser.ID, 0)

        def LP(self):
            return self.getToken(Tutor03Parser.LP, 0)

        def RP(self):
            return self.getToken(Tutor03Parser.RP, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Tutor03Parser.ExpContext)
            else:
                return self.getTypedRuleContext(Tutor03Parser.ExpContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(Tutor03Parser.CM)
            else:
                return self.getToken(Tutor03Parser.CM, i)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_func_call




    def func_call(self):

        localctx = Tutor03Parser.Func_callContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_func_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(Tutor03Parser.ID)
            self.state = 83
            self.match(Tutor03Parser.LP)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Tutor03Parser.ID) | (1 << Tutor03Parser.INTLIT) | (1 << Tutor03Parser.FLOATLIT) | (1 << Tutor03Parser.LP))) != 0):
                self.state = 84
                self.exp(0)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Tutor03Parser.CM:
                    self.state = 85
                    self.match(Tutor03Parser.CM)
                    self.state = 86
                    self.exp(0)
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 94
            self.match(Tutor03Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operands(self):
            return self.getTypedRuleContext(Tutor03Parser.OperandsContext,0)


        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Tutor03Parser.ExpContext)
            else:
                return self.getTypedRuleContext(Tutor03Parser.ExpContext,i)


        def MULOP(self):
            return self.getToken(Tutor03Parser.MULOP, 0)

        def DIVOP(self):
            return self.getToken(Tutor03Parser.DIVOP, 0)

        def ADDOP(self):
            return self.getToken(Tutor03Parser.ADDOP, 0)

        def SUBOP(self):
            return self.getToken(Tutor03Parser.SUBOP, 0)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_exp



    def exp(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Tutor03Parser.ExpContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_exp, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.operands()
            self._ctx.stop = self._input.LT(-1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 108
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = Tutor03Parser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 99
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 100
                        _la = self._input.LA(1)
                        if not(_la==Tutor03Parser.MULOP or _la==Tutor03Parser.DIVOP):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 101
                        self.exp(4)
                        pass

                    elif la_ == 2:
                        localctx = Tutor03Parser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 102
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 103
                        self.match(Tutor03Parser.ADDOP)
                        self.state = 104
                        self.exp(2)
                        pass

                    elif la_ == 3:
                        localctx = Tutor03Parser.ExpContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_exp)
                        self.state = 105
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 106
                        self.match(Tutor03Parser.SUBOP)
                        self.state = 107
                        self.exp(2)
                        pass

             
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(Tutor03Parser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(Tutor03Parser.FLOATLIT, 0)

        def ID(self):
            return self.getToken(Tutor03Parser.ID, 0)

        def func_call(self):
            return self.getTypedRuleContext(Tutor03Parser.Func_callContext,0)


        def LP(self):
            return self.getToken(Tutor03Parser.LP, 0)

        def exp(self):
            return self.getTypedRuleContext(Tutor03Parser.ExpContext,0)


        def RP(self):
            return self.getToken(Tutor03Parser.RP, 0)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_operands




    def operands(self):

        localctx = Tutor03Parser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_operands)
        try:
            self.state = 121
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.match(Tutor03Parser.INTLIT)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(Tutor03Parser.FLOATLIT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(Tutor03Parser.ID)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.func_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 117
                self.match(Tutor03Parser.LP)
                self.state = 118
                self.exp(0)
                self.state = 119
                self.match(Tutor03Parser.RP)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_bkit(self):
            return self.getTypedRuleContext(Tutor03Parser.Type_bkitContext,0)


        def idlists(self):
            return self.getTypedRuleContext(Tutor03Parser.IdlistsContext,0)


        def SM(self):
            return self.getToken(Tutor03Parser.SM, 0)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_var_declare




    def var_declare(self):

        localctx = Tutor03Parser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.type_bkit()
            self.state = 124
            self.idlists()
            self.state = 125
            self.match(Tutor03Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(Tutor03Parser.ID)
            else:
                return self.getToken(Tutor03Parser.ID, i)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(Tutor03Parser.CM)
            else:
                return self.getToken(Tutor03Parser.CM, i)

        def getRuleIndex(self):
            return Tutor03Parser.RULE_idlists




    def idlists(self):

        localctx = Tutor03Parser.IdlistsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_idlists)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(Tutor03Parser.ID)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Tutor03Parser.CM:
                self.state = 128
                self.match(Tutor03Parser.CM)
                self.state = 129
                self.match(Tutor03Parser.ID)
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[10] = self.exp_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def exp_sempred(self, localctx:ExpContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 1)
         




